:art: Refine database attributes collapse control https://github.com/siyuan-note/siyuan/issues/11371

--- a/app/src/assets/scss/business/_custom.scss
+++ b/app/src/assets/scss/business/_custom.scss
@@ -259,12 +259,11 @@
     }
 
     & > .block__icon:first-child {
-      padding-left: 0;
-      padding-right: 0;
+      margin-left: -4px;
     }
 
     .block__logo {
-      margin-left: 0;
+      margin-left: 4px;
       min-height: 34px;
       font-weight: 500;
     }
